syntax = "proto3";
package MonetaToday.honeywood.bears;

option go_package = "github.com/MonetaToday/HoneyWood/x/bears/types";
import "gogoproto/gogo.proto"; 

message AirHistory {
  uint64 height = 1;
  string count = 2
    [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
  string quality = 3
    [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
}

message AirInfo {
  repeated AirHistory history = 1 [(gogoproto.nullable) = false]; 
}
