syntax = "proto3";
package MonetaToday.honeywood.bears;

option go_package = "github.com/MonetaToday/HoneyWood/x/bears/types";
import "gogoproto/gogo.proto"; 
import "bears/fields.proto";
import "bears/bears.proto";

message Apiaries {
  uint64 id = 1;
  BearOwner bearOwner = 2; 
  enum ApiaryTypes {
    BEE_HOUSE = 0;
    APIARY = 1;
    ALVEARY = 2;
  }
  ApiaryTypes apiaryType = 3;
  ItemPosition position = 4 [(gogoproto.nullable) = false];
}