syntax = "proto3";
package MonetaToday.honeywood.bears;

option go_package = "github.com/MonetaToday/HoneyWood/x/bears/types";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto"; 
import "bears/bears.proto";

message BeeParams {
  string bee_type = 1 [(gogoproto.moretags) = "yaml:\"bee_type\""];
  repeated cosmos.base.v1beta1.Coin price = 2
    [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"price\""];
  string honey_per_hour = 3
    [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"honey_per_hour\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
  uint64 body_size = 4 [(gogoproto.moretags) = "yaml:\"size\""];
  string air_dependency = 5
    [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"air_dependency\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
}

message ApiaryHouse {
  uint64 id = 1;
}

message Bees {
  uint64 id = 1;
  string name = 2;
  BearOwner bearOwner = 3;
  ApiaryHouse apiaryHouse = 4;
  BeeParams params = 5;
}