syntax = "proto3";
package MonetaToday.honeywood.bears;

import "gogoproto/gogo.proto";
import "bears/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/MonetaToday/HoneyWood/x/bears/types";

// GenesisState defines the bears module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
