syntax = "proto3";
package MonetaToday.honeywood.bears;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/MonetaToday/HoneyWood/x/bears/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  
  cosmos.base.v1beta1.Coin price_set_name = 1
    [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"price_set_name\""];
  cosmos.base.v1beta1.Coin price_tile = 2
    [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"price_tile\""];


  cosmos.base.v1beta1.Coin price_tree = 3
    [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"price_tree\""];
  cosmos.base.v1beta1.Coin reward_tree = 4
    [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"reward_tree\""];  


  cosmos.base.v1beta1.Coin price_decoration_flowers = 5
    [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"price_decoration_flowers\""];
  cosmos.base.v1beta1.Coin price_decoration_flag = 6
    [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"price_decoration_flag\""]; 
  cosmos.base.v1beta1.Coin price_decoration_lamp = 7
    [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"price_decoration_lamp\""]; 
  cosmos.base.v1beta1.Coin price_decoration_green_bee = 8
    [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"price_decoration_green_bee\""]; 
  cosmos.base.v1beta1.Coin price_decoration_fountain = 9
    [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"price_decoration_fountain\""];


}